--- a/06 pseudoclases/index.html
+++ b/06 pseudoclases/index.html
@@ -30,17 +30,53 @@
        <input class="input2" type="checkbox">
        <label class="label">:checked</label>
        <label class="label">:in-range</label>
-       <input class="input2" type="number">
+       <input class="input2" type="number" min="50" max="80">
        <label class="label">:out-of-range</label>
-       <input class="input2" type="number">
+       <input class="input2" type="number" min="50" max="80">
        <label class="label">:optional</label>
        <input class="input2" type="text">
        <label class="label">:required</label>
-       <input class="input2" type="text">
+       <input class="input2" type="text" required>
        <label class="label">:valid</label>
-       <input class="input2" type="number">
+       <input class="input2" type="number" min="50" max="80">
        <label class="label">:invalid</label>
-       <input class="input2" type="number">
+       <input class="input2" type="number" min="50" max="100">
+
+       <br>
+       <div class="contenedor1">
+           <h2>contenedor 1</h2>
+            <p class="parrafo">parrafo 1</p>
+            <p class="parrafo">parrafo 2</p>
+            <p class="parrafo">parrafo 3</p>
+            <p class="parrafo">parrafo 4</p>
+            <p class="parrafo">parrafo 5</p>
+            <p class="parrafo">parrafo 6</p>
+            <p class="parrafo">parrafo 7</p>
+            <p class="parrafo">parrafo 8</p>
+       </div>
+
+        <div class="contenedor2">
+            <h2>contenedor 2</h2>
+            <p class="parrafo">parrafo 1</p>
+            <p class="parrafo">parrafo 2</p>
+            <p class="parrafo">parrafo 3</p>
+            <p class="parrafo">parrafo 4</p>
+            <p class="parrafo">parrafo 5</p>
+            <p class="parrafo">parrafo 6</p>
+            <p class="parrafo">parrafo 7</p>
+            <p class="parrafo">parrafo 8</p>
+        </div>
+       <!-- <p class="parrafo"></p> -->
+
+       <div class="contenedor">
+           <h2>contenedor unico</h2>
+            <div >parrafo</div>
+            <div class="parrafo second">parrafo</div>
+            <div class="parrafo">parrafo</div>
+            <p class="parrafo first">parrafo 1</p>
+            <p class="parrafo second">parrafo 1</p>
+            
+    </div>
    </form>
 </body>
 </html>
