--- a/07 variables CSS/index.html
+++ b/07 variables CSS/index.html
@@ -9,6 +9,21 @@
     <title>Document</title>
 </head>
 <body>
-   
+   <h1 class="title">Variables CSS</h1>
+   <article class="main-article">
+       <p class="parrafo">
+           parrafo
+       </p>
+   </article>
+
+   <article class="article">
+        <p class="parrafo">
+            otro parrafo
+        </p>
+    </article>
+
+    <input type="checkbox" class="check">
+    <div class="box"></div>
+
 </body>
 </html>
