--- a/08 background/index.html
+++ b/08 background/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <h1 class="title">background</h1>
-    <div class="bg-color"></div>
+    <!-- <div class="bg-color"></div>
     <div class="bg-image"></div>
     <div class="bg-size"></div>
     <div class="bg-repeat"></div>
     <div class="bg-position"></div>
     <div class="bg-origin"><p>contenido</p></div>
     <div class="bg-clip">contenido</div>
+    <div class="bg-attachment"></div> -->
     <div class="bg-multiple"></div>
-    <div class="bg-attachment"></div>
 </body>
 </html>
