--- a/09 tipografias/index.html
+++ b/09 tipografias/index.html
@@ -13,12 +13,20 @@
   <p class="paragraph">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium repellat ullam in est cum, reiciendis repudiandae perferendis omnis magnam suscipit beatae fuga nihil corrupti veritatis esse. Maiores, provident. Voluptatum, commodi.
   </p>
+
+  <h1 class="title2">Estilos de textos</h1>
+
+  <p class="paragraph2">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit voluptate fugiat perspiciatis facilis, quis est tenetur placeat soluta, perferendis excepturi nesciunt error, vero aliquam eos deserunt libero sed? Debitis, dolor.
+  </p>
+
   <a href="#" class="link">Soy un enlace</a>
   <button class="button">Soy un boton</button>
 
   <div class="box">
       <div class="box__item">ITEM 1</div>
-      <div class="box__item">ITEM 2</div>
   </div>
+
+
 </body>
 </html>
