--- a/15 flexbox/index.html
+++ b/15 flexbox/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/normalize.css">
+    <title>Flexbox - flex-direction/flex wrap</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Document</title>
 </head>
+
 <body>
-    <div class="flex-container">
+    <!-- <div class="flex-container">
         <div class="flex-item">1</div>
         <div class="flex-item">2</div>
         <div class="flex-item">3</div>
         <div class="flex-item">4</div>
         <div class="flex-item">5</div>
+        
         <div class="flex-item">6</div>
         <div class="flex-item">7</div>
         <div class="flex-item">8</div>
         <div class="flex-item">9</div>
         <div class="flex-item">10</div>
+    </div> -->
+        <div class="box">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <img src="img/logo2.jpg" alt="">
     </div>
+
+    <!--     <div class="prices">
+        <div class="prices__item">
+            <h2 class="prices__title">Table 1</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, culpa. Culpa voluptatum ratione expedita voluptas, veritatis ipsum, dicta maxime animi facere fugit quas laudantium laborum, praesentium nobis totam saepe impedit.
+            </p>
+        </div>
+        <div class="prices__item">
+            <h2 class="prices__title">Table 2</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, culpa.</p>
+        </div>
+        <div class="prices__item">
+            <h2 class="prices__title">Table 3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, culpa. Culpa voluptatum ratione expedita voluptas, veritatis ipsum, dicta maxime animi facere fugit quas laudantium laborum, praesentium nobis totam saepe impedit.</p>
+        </div>
+        <div class="prices__item">
+            <h2 class="prices__title">Table 4</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, culpa. Culpa voluptatum ratione expedita</p>
+        </div>
+    </div> -->
 </body>
+
 </html>
