ultimos temas de flexbox

--- a/15 flexbox/index.html
+++ b/15 flexbox/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <!-- <div class="flex-container">
+    <div class="flex-container">
         <div class="flex-item">1</div>
-        <div class="flex-item">2</div>
+        <!-- <div class="flex-item">2</div>
         <div class="flex-item">3</div>
         <div class="flex-item">4</div>
         <div class="flex-item">5</div>
@@ -19,14 +19,14 @@
         <div class="flex-item">7</div>
         <div class="flex-item">8</div>
         <div class="flex-item">9</div>
-        <div class="flex-item">10</div>
-    </div> -->
-        <div class="box">
+        <div class="flex-item">10</div> -->
+    </div>
+        <!-- <div class="box">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         <img src="img/logo2.jpg" alt="">
-    </div>
-
-    <!--     <div class="prices">
+    </div> -->
+<!-- 
+        <div class="prices">
         <div class="prices__item">
             <h2 class="prices__title">Table 1</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, culpa. Culpa voluptatum ratione expedita voluptas, veritatis ipsum, dicta maxime animi facere fugit quas laudantium laborum, praesentium nobis totam saepe impedit.
