--- a/16 flexbox order/index.html
+++ b/16 flexbox order/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="flex-container">
+        <div class="flex-item">5</div>
         <div class="flex-item">1</div>
         <div class="flex-item">2</div>
         <div class="flex-item">3</div>
