--- a/22 grid order y alineacion/index.html
+++ b/22 grid order y alineacion/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Flexbox - flex-direction/flex wrap</title>
+    <title>Grid - alineamiento</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -17,12 +17,6 @@
         <div class="grid-item">F</div>
         <div class="grid-item">G</div>
         <div class="grid-item">H</div>
-        <div class="grid-item">I</div>
-        <div class="grid-item">J</div>
-        <div class="grid-item">K</div>
-        <div class="grid-item">L</div>
-        <div class="grid-item">M</div>
-        <div class="grid-item">N</div>
     </div>
 </body>
 
