--- a/25 responsive/index.html
+++ b/25 responsive/index.html
@@ -9,20 +9,12 @@
     </head>
 
     <body>
-        <header class="header">
-            <div class="banner">Banner</div>
-        </header>
-        <div class="flexbox grid">
-            <p class="flexbox__item grid__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus fugiat voluptates modi laudantium exercitationem commodi rem, tenetur minima eos? Ipsa exercitationem dolore facere pariatur omnis dicta harum modi quia.</p>
-            <p class="flexbox__item grid__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus fugiat voluptates modi laudantium exercitationem commodi rem, tenetur minima eos? Ipsa exercitationem dolore facere pariatur omnis dicta harum modi quia.</p>
-            <p class="flexbox__item grid__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus fugiat voluptates modi laudantium exercitationem commodi rem, tenetur minima eos? Ipsa exercitationem dolore facere pariatur omnis dicta harum modi quia.</p>
-            <p class="flexbox__item grid__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus fugiat voluptates modi laudantium exercitationem commodi rem, tenetur minima eos? Ipsa exercitationem dolore facere pariatur omnis dicta harum modi quia.</p>
-            <p class="flexbox__item grid__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus fugiat voluptates modi laudantium exercitationem commodi rem, tenetur minima eos? Ipsa exercitationem dolore facere pariatur omnis dicta harum modi quia.</p>
-            <p class="flexbox__item grid__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus fugiat voluptates modi laudantium exercitationem commodi rem, tenetur minima eos? Ipsa exercitationem dolore facere pariatur omnis dicta harum modi quia.</p>
-        </div>
-        <footer class="footer">
-            footer
-        </footer>
+        <ul class="menu">
+            <li class="menu__item">Item 1</li>
+            <li class="menu__item">Item 2</li>
+            <li class="menu__item">Item 3</li>
+            <li class="menu__item">Item 4</li>
+        </ul>
     </body>
 
 
